packages/atomic/src/components/result-template-components/atomic-result-printable-uri/atomic-result-printable-uri.pcss
atomic-result-printable-uri {
  max-width: 100%;

  ul {
    display: flex;
    flex-wrap: wrap;
  }

  li {
    display: inline-flex;
    align-items: center;
    max-width: 100%;

    a,
    button {
      color: var(--atomic-primary);

      &:hover {
        text-decoration: underline;
      }
    }

    a {
      display: inline-block;
      vertical-align: middle;
      max-width: 100%;
      text-overflow: ellipsis;
      overflow: hidden;

      a:visited {
        color: var(--atomic-visited);
      }
    }

    &:last-child {
      white-space: normal;

      &::after {
        content: none;
      }
    }

    .result-printable-uri-separator {
      display: inline-block;
      margin: 0 0.5rem;
      vertical-align: middle;
      width: 0.75rem;
      height: 0.75rem;
      color: var(--atomic-neutral-dark);
    }
  }
}

